@@ -119,3 +119,8 @@ CollapseAllModulesAction.tooltip=Collapse All
 
 ModulePropertiesAction.label=Properties...
 ModulePropertiesAction.tooltip=Open Module Properties Dialog
+
+AddRegisterGroupAction.label=Add Register Group
+AddRegisterGroupAction.tooltip=Add Register Group
+RemoveRegisterGroupAction.label=Remove Register Group
+RemoveRegisterGroupAction.tooltip=Remove Register Group
