@@ -96,6 +96,14 @@ ResumeAtLineAdapter.1=Missing document
 ResumeAtLineAdapter.2=Empty editor
 ResumeAtLineAdapter.3=Operation is not supported.
 ResumeAtLineAdapter.4=Resume At Line failed.
+RegisterGroupDialog.0=New Group
+RegisterGroupDialog.1=Select All
+RegisterGroupDialog.2=Desellect All
+RegisterGroupDialog.3=Group Name:
+RegisterGroupDialog.4=Choose From The List:
+RegisterGroupDialog.5=Register Group
+RegisterGroupDialog.6=Select the group registers
+RegisterGroupDialog.7=The group name field must not be empty.
 ToggleDetailPaneAction.0=Vertical View Orientation
 ToggleDetailPaneAction.1=Place the Detail Pane Underneath the Main Tree View
 ToggleDetailPaneAction.2=Place the Detail Pane Underneath the Main Tree View
@@ -104,3 +112,5 @@ ToggleDetailPaneAction.4=Place the Detail Pane on the Right of the Main Tree Vie
 ToggleDetailPaneAction.5=Place the Detail Pane on the Right of the Main Tree View
 ToggleDetailPaneAction.6=Hide the Detail Pane so that only the Main Tree View is Visible
 ToggleDetailPaneAction.7=Hide the Detail Pane so that only the Main Tree View is Visible
+AddRegisterGroupActionDelegate.0=Error
+AddRegisterGroupActionDelegate.1=Error(s) occurred adding register group.
